Category: New content Workitem: https://dev.azure.com/dynamicscrm/OneCRM/_workitems/edit/4487504 Description: Added draft topics for Dynamics 365 Contact Center trial docs.

--- a/contact-center/implement/toc.yml
+++ b/contact-center/implement/toc.yml
@@ -8,6 +8,12 @@
         href: overview-contact-center.md
       - name: Get started
         items:
+        - name: Try
+          items:
+          - name: Sign up for a free Dynamics 365 Contact Center trial
+            href: try-dynamics365-contact-center.md
+          - name: Dynamics 365 Contact Center trial FAQ
+            href: contact-center-trial-faq.md
         - name: Buy
           items:
           - name: Buy Dynamics 365 Contact Center
