--- a/contact-center/administer/toc.yml
+++ b/contact-center/administer/toc.yml
@@ -232,7 +232,7 @@
           href: overview-customer-intent-agent.md
         - name: Configure Customer Intent Agent
           href: configure-customer-intent.md
-        - name: Configure intent-based suggestions for Copilot Studio bots
+        - name: Configure intent-based suggestions for Copilot Studio agents
           href: intent-bot-setup.md
       - name: Copilot in Contact Center
         items:
