--- a/contact-center/administer/toc.yml
+++ b/contact-center/administer/toc.yml
@@ -230,8 +230,8 @@
         items:
         - name: Overview of Customer Intent Agent
           href: overview-customer-intent-agent.md
-        - name: Configure Customer Intent Agent
-          href: configure-customer-intent.md
+        - name: Manage Customer Intent Agent
+          href: manage-customer-intent-agent.md
         - name: Configure intent-based suggestions for Copilot Studio bots
           href: intent-bot-setup.md
       - name: Copilot in Contact Center
