Category: New content Workitem: https://dev.azure.com/dynamicscrm/OneCRM/_workitems/edit/4465504 Description: Added RAI FAQ for AI Agents

--- a/contact-center/implement/toc.yml
+++ b/contact-center/implement/toc.yml
@@ -74,6 +74,8 @@
         items:
         - name: Overview
           href: /dynamics365/customer-service/implement/responsible-ai-overview?context=/dynamics365/contact-center/context/implement-context
+        - name: Responsible AI FAQ for AI Agents (Preview)
+          href: faq-rai-ai-agents.md
         - name: Responsible AI FAQ for Copilot in Customer Service
           href: /dynamics365/customer-service/implement/faq-responsible-ai-copilot?context=/dynamics365/contact-center/context/implement-context
       - name: Resources
