--- a/contact-center/use/toc.yml
+++ b/contact-center/use/toc.yml
@@ -72,16 +72,18 @@
           href: /dynamics365/customer-service/use/voice-channel-monitor-calls?context=/dynamics365/contact-center/context/use-context
       - name: Use Copilot
         items: 
-        - name: Use Copilot to solve customer issues 
-          href: use-copilot-features.md
-        - name: Use Copilot to summarize cases and conversations
+        - name: Copilot feature availability across applications
+          href: /dynamics365/customer-service/use/copilot-feature-guide?context=/dynamics365/context/contact-center-context
+        - name: Summarize cases
           href: copilot-use-summary.md
+        - name: Summarize conversations
+          href: /dynamics365/customer-service/use/copilot-summarize-conversations?context=/dynamics365/context/contact-center-context  
         - name: Ask a question
-          href: use-copilot-features.md#ask-a-question
+          href: /dynamics365/customer-service/use/use-ask-a-question?context=/dynamics365/context/contact-center-context  
         - name: Draft a chat response (preview)
-          href: use-copilot-features.md#draft-a-chat-response-preview
+          href: /dynamics365/customer-service/use/use-copilot-features?context=/dynamics365/context/contact-center-context  
         - name: Write an email with Copilot
-          href: use-copilot-email.md
+          href: /dynamics365/customer-service/use/use-copilot-email?context=/dynamics365/context/contact-center-context  
         - name: Understand how Copilot supports different languages
           href: copilot-language-support.md
         - name: View analytics for Copilot impact
