Category: Update Workitem: Task 4559443 [DOC][Update] Add trial links in Dynamics 365 Contact Center hub page. Description: Replicated the Contact Center hub page as per the Customer Service hub page tile view.

--- a/contact-center/index.yml
+++ b/contact-center/index.yml
@@ -46,8 +46,10 @@ additionalContent:
         text: Implementation
       - url: /dynamics365/adoption/adoption-guide
         text: Adoption guide
-    - title: Buy/Provision
+    - title: Try/Buy/Provision
       links: 
+      - url: implement/try-dynamics365-contact-center.md
+        text: Try Dynamics 365 Contact Center
       - url: https://www.microsoft.com/dynamics-365/products/contact-center/pricing/
         text: Buy Dynamics 365 Contact Center
       - url: implement/provision-channels.md
