--- a/contact-center/use/toc.yml
+++ b/contact-center/use/toc.yml
@@ -85,8 +85,7 @@
         - name: Write an email with Copilot
           href: use-copilot-email.md  
         - name: Understand how Copilot supports different languages
-        - name: Use Copilot filters
-          href: use-copilot-filters.md
+          href: copilot-language-support.md
         - name: Chat with case data in Customer Service (preview)
           href: copilot-chat-customer-service-data.md
       - name: Unified routing and assignment
