--- a/contact-center/index.yml
+++ b/contact-center/index.yml
@@ -10,7 +10,7 @@ metadata:
   ms.topic: hub-page
   author: neeranelli
   ms.author: nenellim
-  ms.date: 07/29/2024
+  ms.date: 02/06/2025
   ms.custom: bap-template
   hide_bc: true
 
@@ -44,8 +44,6 @@ additionalContent:
         text: Security and compliance
       - url: /dynamics365/guidance/implementation-guide/overview
         text: Implementation
-      - url: /dynamics365/adoption/adoption-guide
-        text: Adoption guide
     - title: Try/Buy/Provision
       links: 
       - url: implement/try-dynamics365-contact-center.md
@@ -136,11 +134,11 @@ additionalContent:
           summary: Learn how to quickly build low-code apps that modernize processes and solve tough business challenges in your organization using Power Apps.
           url: /power-apps/
         - title: Microsoft Power Platform
-          summary: Learn how to quickly and easily build custom apps using Power Apps, automate workflows to improve business productivity using Power Automate, analyze data for insights using Power BI, rapidly design, configure, and publish modern websites using Power Pages, and build intelligent bots with a no-code interface using Copilot Studio.
+          summary: Learn how to quickly and easily build custom apps, automate workflows to improve business productivity, analyze data for insights, and design and publish modern websites.
           url: /power-platform/
         - title: Azure Communication Services
           summary: Build powerful, cloud-based communication and customer engagement experiences by adding voice, video, chat, SMS, email, teams interoperability, call automation, and telephony to your apps.
           url: /azure/communication-services/
         - title: Microsoft Copilot Studio
-          summary: Build chatbots easily with Copilot Studio.
+          summary: Build Copilot agents easily with Copilot Studio.
           url: /microsoft-copilot-studio/
