--- a/contact-center/index.yml
+++ b/contact-center/index.yml
@@ -134,10 +134,10 @@ additionalContent:
           summary: Learn how to quickly build low-code apps that modernize processes and solve tough business challenges in your organization using Power Apps.
           url: /power-apps/
         - title: Microsoft Power Platform
-          summary: Learn how to quickly and easily build custom apps, automate workflows to improve business productivity, analyze data for insights, and design and publish modern websites.
+          summary: Learn how to quickly build custom apps, automate workflows to improve productivity, analyze data for insights, and design modern websites.
           url: /power-platform/
         - title: Azure Communication Services
-          summary: Build powerful, cloud-based communication and customer engagement experiences by adding voice, video, chat, SMS, email, teams interoperability, call automation, and telephony to your apps.
+          summary: Build powerful, cloud-based communication and customer engagement experiences by adding voice, video, chat, SMS, email, and telephony to your apps.
           url: /azure/communication-services/
         - title: Microsoft Copilot Studio
           summary: Build Copilot agents easily with Copilot Studio.
