Category: Update Workitem: Task 4631083 [Doc] Verify branding changes for Dynamics 365 Customer Service, Dynamics 365 Contact Center, Microsoft 365 Copilot for Service Description: Verified that instances of bot to AI agent and human agent to Service representatives are replaced accurately.

--- a/contact-center/administer/toc.yml
+++ b/contact-center/administer/toc.yml
@@ -384,7 +384,7 @@
           href: /dynamics365/customer-service/administer/configure-bot-virtual-agent?context=/dynamics365/contact-center/context/administer-context          
         - name: Configure context variables for agents
           href: /dynamics365/customer-service/administer/context-variables-for-bot?context=/dynamics365/contact-center/context/administer-context              
-        - name: Transfer conversations from customer service representatives to agents
+        - name: Transfer conversations from customer service representatives to AI agents
           href: transfer-to-agents.md                    
         - name: Configure Azure AI agents 
           items:
