--- a/contact-center/implement/toc.yml
+++ b/contact-center/implement/toc.yml
@@ -40,7 +40,7 @@
           href: /dynamics365/get-started/privacy/
         - name: Keyboard navigation support
           href: /dynamics365/customer-service/implement/keyboard-navigation-support-customer-service-hub?context=/dynamics365/contact-center/context/implement-context
-      - Compliance
+      - name: Compliance
         items:
         - name: Compliance certifications
           href: cc-compliance-certifications.md
