Update the file name to replace bot with agent

--- a/contact-center/administer/toc.yml
+++ b/contact-center/administer/toc.yml
@@ -239,7 +239,7 @@
         - name: Enable intent-based suggestions for service representatives
           href: enable-intent-for-service-reps.md
         - name: Configure intent-based suggestions for Copilot agents
-          href: intent-bot-setup.md
+          href: intent-agent-setup.md
       - name: Copilot in Contact Center
         items:
         - name: Manage Copilot features
