--- a/contact-center/administer/toc.yml
+++ b/contact-center/administer/toc.yml
@@ -320,7 +320,7 @@
             href: /dynamics365/customer-service/administer/configure-line-channel?context=/dynamics365/contact-center/context/administer-context
           - name: Configure a WhatsApp channel in Twilio
             href: /dynamics365/customer-service/administer/configure-whatsapp-channel?context=/dynamics365/contact-center/context/administer-context
-          - name: Configure a WhatsApp channel through Azure Communication Services (preview)
+          - name: Configure a WhatsApp channel through Azure Communication Services
             href: configure-whatsapp-acs.md    
           - name: Configure a WeChat channel
             href: /dynamics365/customer-service/administer/configure-wechat-channel?context=/dynamics365/contact-center/context/administer-context
