--- a/contact-center/administer/toc.yml
+++ b/contact-center/administer/toc.yml
@@ -230,9 +230,9 @@
           href: /dynamics365/customer-service/administer/voice-channel-pricing-scenarios?context=/dynamics365/contact-center/context/administer-context
         - name: FAQ about the voice channel
           href: /dynamics365/customer-service/administer/voice-channel-faqs?context=/dynamics365/contact-center/context/administer-context
-      - name: Autonomous agents (preview)
+      - name: Autonomous service agents (preview)
         items:
-        - name: Overview of autonomous agents
+        - name: Overview of autonomous service agents
           href: autonomous-agents-overview.md
         - name: Customer Intent Agent 
           items:
@@ -244,6 +244,8 @@
             href: enable-intent-for-service-reps.md
           - name: Configure intent-based suggestions for Copilot agents
             href: set-up-intent-agent.md
+          - name: Set up a pay-as-you-go plan
+            href: /dynamics365/customer-service/administer/setup-pay-as-you-go?context=/dynamics365/contact-center/context/administer-context
       - name: Copilot in Contact Center
         items:
         - name: Manage Copilot features
