--- a/contact-center/use/toc.yml
+++ b/contact-center/use/toc.yml
@@ -54,6 +54,10 @@
           href: /dynamics365/customer-service/use/oc-real-time-translation?context=/dynamics365/contact-center/context/use-context
         - name: Markdown formats for agents
           href: /dynamics365/customer-service/use/markdown-formats-agents?context=/dynamics365/contact-center/context/use-context
+        - name: Use shift bidding
+          href: wfm-representative-shift-bidding.md
+        - name: Use shift swapping
+          href: wfm-use-shift-swapping.md
       - name: Voice
         items:
         - name: Call a customer
@@ -168,7 +172,7 @@
           href: /dynamics365/customer-service/use/oc-view-ai-suggested-cases-articles?context=/dynamics365/contact-center/context/use-context
         - name: View smart assist suggestions
           href: /dynamics365/customer-service/use/oc-smart-assist?context=/dynamics365/contact-center/context/use-context
-        - name: View the agent calendar
+        - name: View the representative calendar
           href: /dynamics365/customer-service/use/use-agent-calendar?context=/dynamics365/contact-center/context/use-context
         - name: Use agent diagnostics as a self-help tool
           href: /dynamics365/customer-service/use/use-agent-diagnostics?context=/dynamics365/contact-center/context/use-context
@@ -310,7 +314,29 @@
         href: /dynamics365/customer-service/use/report-issues?context=/dynamics365/contact-center/context/use-context
       - name: Share feedback
         href: /dynamics365/customer-service/use/cs-share-feedback?context=/dynamics365/contact-center/context/use-context
-    - name: Responsible AI
+    - name: Manage workforce
+      items:
+      - name: Forecasting
+        items: 
+        - name: Create and manage forecast scenarios
+          href: wfm-forecast-scenarios.md
+        - name: Import historical data
+          href: wfm-import-historical-data.md
+        - name: Create and manage capacity plans
+          href: wfm-capacity-planning.md
+      - name: Shift planning and scheduling
+        items:
+        - name: Create and manage shift plans
+          href: wfm-shift-plan.md
+        - name: Use manual schedule management
+          href: wfm-manual-schedule-management.md
+        - name: Use auto schedule to schedule service representatives
+          href: wfm-auto-schedule.md
+      - name: Time management
+        items:
+        - name: Manage time-off requests
+          href: wfm-view-time-off-requests.mc 
+   - name: Responsible AI
       items:
       - name: Overview
         href: /dynamics365/customer-service/implement/responsible-ai-overview?context=/dynamics365/contact-center/context/use-context
