--- a/contact-center/administer/toc.yml
+++ b/contact-center/administer/toc.yml
@@ -176,14 +176,18 @@
           href: /dynamics365/customer-service/administer/link-note-to-entity?context=/dynamics365/contact-center/context/administer-context
         - name: FAQ about Activities and the Timeline Wall
           href: /powerapps/user/faq-for-timeline-and-activity
-      - name: Proactive engagement
+      - name: Proactive engagement (preview)
         items:
         - name: Overview of proactive engagement
-          href: proactive-engagement-overview.md
+          href: overview-proactive-engagement.md
         - name: Configure proactive engagement
           href: configure-proactive-engagement.md
         - name: References for proactive engagement
-          href: references-for-proactive-engagement.md
+          items:
+          - name: Dial modes
+            href: configure-proactive-engagement.md#dial-modes
+          - name: Outcomes
+            href: configure-proactive-engagement.md#outcomes
       - name: Voice
         items:
         - name: Introduction to the voice channel
