--- a/contact-center/use/toc.yml
+++ b/contact-center/use/toc.yml
@@ -334,6 +334,8 @@
             href: wfm-representative-shift-bidding.md
           - name: Use shift swapping
             href: wfm-use-shift-swapping.md
+          - name: Use the Schedule Calendar
+            href: /dynamics365/customer-service/use/use-agent-calendar?context=/dynamics365/contact-center/context/use-context
         - name: Shift-based routing
           items:
           - name: Overview of shift-based routing
