--- a/contact-center/administer/toc.yml
+++ b/contact-center/administer/toc.yml
@@ -268,6 +268,8 @@
             href: overview-customer-intent-agent.md
           - name: Manage Customer Intent Agent
             href: manage-customer-intent-agent.md
+          - name: Configure intent-based routing
+            href: /dynamics365/customer-service/administer/configure-intent-based-routing?context=/dynamics365/contact-center/context/administer-context
           - name: Enable intent-based suggestions for service representatives
             href: enable-intent-for-service-reps.md
           - name: Configure intent-based suggestions for Copilot agents
