--- a/contact-center/administer/toc.yml
+++ b/contact-center/administer/toc.yml
@@ -187,7 +187,7 @@
           - name: Dial modes
             href: configure-proactive-engagement.md#dial-modes
           - name: Outcomes
-            href: configure-proactive-engagement.md#outcomes
+            href: configure-proactive-engagement.md#configure-outcomes
       - name: Voice
         items:
         - name: Introduction to the voice channel
