Category: new content Workitem: https://dev.azure.com/msft-skilling/Content/_workitems/edit/421214/ Description: API to trigger outbound calls.

--- a/contact-center/extend/toc.yml
+++ b/contact-center/extend/toc.yml
@@ -32,6 +32,8 @@
         items:
         - name: Use CCaaS_CreateProactiveVoiceDelivery API
           href: api/ccaas_createproactivevoicedelivery.md
+        - name: Use proactive engagement tables for reporting
+          href: proactive-engagement-tables.md
       - name: Chat
         items:
         - name: Develop a custom live chat widget
