--- a/contact-center/extend/toc.yml
+++ b/contact-center/extend/toc.yml
@@ -28,7 +28,7 @@
           href: configure-zendesk-connector.md
         - name: Configure the connector for any CRM solution
           href: configure-custom-connector.md
-      - name: Proactive engagement
+      - name: Proactive engagement (preview)
         items:
         - name: Use CCaaS_CreateProactiveVoiceDelivery API
           href: api/ccaas_createproactivevoicedelivery.md
