--- a/contact-center/use/toc.yml
+++ b/contact-center/use/toc.yml
@@ -8,7 +8,7 @@
         href: ../implement/overview-contact-center.md?context=/dynamics365/contact-center/context/use-context
       - name: Representative experience
         items:
-        - name: Overview of Contact Center workspace
+        - name: Overview of Copilot Service workspace
           href: ccw-overview.md
         - name: Use the inbox
           href: /dynamics365/customer-service/use/use-inbox?context=/dynamics365/contact-center/context/use-context
@@ -162,7 +162,7 @@
           href: /dynamics365/customer-service/use/call-options-visual-engagement?context=/dynamics365/contact-center/context/use-context          
       - name: Agent productivity tools
         items: 
-        - name: Productivity pane in Contact Center workspace
+        - name: Productivity pane in Copilot Service workspace
           href: /dynamics365/customer-service/use/csw-productivity-pane?context=/dynamics365/contact-center/context/use-context
         - name: View smart assist suggestions for knowledge articles and similar cases
           href: /dynamics365/customer-service/use/oc-view-ai-suggested-cases-articles?context=/dynamics365/contact-center/context/use-context
